--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
             rdr2.com
         </title>
     </head>
-    <body class="pag1">
-        <nav>
+    <body>
+        <nav class="menu">
             <ul>
+                <li><img class="logo" src="img/Red_Dead_Redemption_2_Logo.png"></li>
+                <li><a class="textindex" href="index.html"><b>Inicio</b></a></li>
                 <li><a class="textindex" href="historia.html" ><b>Historia</b></a></li>
-                    <a class="textindex" href="..." ><b>Personagens</b></a>
-                    <a class="textindex" href="..." ><b>Gangues</b></a>
-                     <a class="textindex" href="..." ><b>Animais Lendarios</b></a>
+                <li><a class="textindex" href="..." ><b>Personagens</b></a></li>
+                <li><a class="textindex" href="..." ><b>Gangues</b></a></li>
+                <li><a class="textindex" href="..." ><b>Animais Lendarios</b></a></li>
+                <li><a class="textindex" href="..." ><b>Premios</b></a></li>                
             </ul>
         </nav>
+        <section class="conteudo principal">
+            <img class="rockstar" src="img/rockstar.png">
+        </section>
     </body>
 </html>
