--- a/anterior/indexANTERIOR.html
+++ b/anterior/indexANTERIOR.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scaled=1.0">
+        <link rel="shortcut icon" href="img/logo.png">
         <link rel="stylesheet" href="css/styleANTERIOR.css">
         <title>
             rdr2.com
