--- a/historia.html
+++ b/historia.html
@@ -3,6 +3,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scaled=1.0">
         <link rel="stylesheet" href="css/style.css">
+        <style>
+            body{
+                background-color: black;
+            }
+            .hist{
+                color: white;
+                background-color: black;
+            }
+        </style>
         <title>
             rdr2.com
         </title>
@@ -14,9 +23,12 @@
                 <li><a class="textindex" href="index.html"><b>Inicio</b></a></li>
                 <li><a class="textindex" href="historia.html" ><b>Historia</b></a></li>
                 <li><a class="textindex" href="..." ><b>Personagens</b></a></li>
-                <li><a class="textindex" href="..." ><b>Gangues</b></a></li>
+                <li><a class="textindex" href="..." ><b>Compêndio</b></a></li>
                 <li><a class="textindex" href="..." ><b>Animais Lendarios</b></a></li>
-                <li><a class="textindex" href="..." ><b>Premios</b></a></li>                
+                <li><a class="textindex" href="..." ><b>Peixes Lendarios</b></a></li>   
+                <li><a class="textindex" href="..." ><b>Desafios</b></a></li>  
+                <li><a class="textindex" href="..." ><b>Premios</b></a></li>  
+                <li><a class="textindex" href="..." ><b>Premios</b></a></li>                 
             </ul>
         </nav>
         <section class="conteudo">
