--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
+        <style>
+            
+        </style>
         <title>
             rdr2.com
         </title>
@@ -15,7 +19,7 @@
                 <li><a class="textindex" href="historia.html" ><b>Historia</b></a></li>
                 <li><a class="textindex" href="..." ><b>Personagens</b></a></li>
                 <li><a class="textindex" href="" onclick="abrirMenuCompendio('leo');" ><b>Compêndio</b></a></li>
-                <li><a class="textindex" href="..." ><b>Animais Lendarios</b></a></li>
+                <li><a class="textindex" href="animaislend.html" ><b>Animais Lendarios</b></a></li>
                 <li><a class="textindex" href="..." ><b>Peixes Lendarios</b></a></li>   
                 <li><a class="textindex" href="..." ><b>Desafios</b></a></li>  
                 <li><a class="textindex" href="..." ><b>Premios</b></a></li>  
