--- a/historia.html
+++ b/historia.html
@@ -24,33 +24,32 @@
         <nav class="menu">
             <ul>
                 <li><img class="logo" src="img/Red_Dead_Redemption_2_Logo.png"></li>
-                <li><a class="textindex" href="index.html"><b>Inicio</b></a></li>
-                <li><a class="textindex" href="historia.html" ><b>Historia</b></a></li>
-                <li><a class="textindex" href="..." ><b>Personagens</b></a></li>
-                <li><a class="textindex" href="" id="btn-compendio"><b>Compêndio</b></a></li>
-                <li><a class="textindex" href="animaislend.html" ><b>Animais Lendarios</b></a></li>
-                <li><a class="textindex" href="..." ><b>Peixes Lendarios</b></a></li>   
-                <li><a class="textindex" href="..." ><b>Desafios</b></a></li>  
-                <li><a class="textindex" href="..." ><b>Premios</b></a></li>  
-                <li><a class="textindex" href="..." ><b>Premios</b></a></li>              
+                <li class="item"><a class="textindex" href="index.html"><b>Inicio</b></a></li>
+                <li class="item"><a class="textindex" href="historia.html" ><b>Historia</b></a></li>
+                <li class="item"><a class="textindex" href="personagens.html" ><b>Personagens</b></a></li>
+                <li class="item"><a class="textindex" href="" id="btn-compendio"><b>Compêndio</b></a></li>
+                <li class="item"><a class="textindex" href="animaislend.html" ><b>Animais Lendarios</b></a></li>
+                <li class="item"><a class="textindex" href="..."><b>Peixes Lendarios</b></a></li>   
+                <li class="item"><a class="textindex" href="..." ><b>Desafios</b></a></li>  
+                <li class="item"><a class="textindex" href="..." ><b>Premios</b></a></li>  
+                <li class="item"><a class="textindex" href="..." ><b>Premios</b></a></li>              
             </ul>
         </nav>
 
         <!-- Submenu Compêndio -->
         <nav class="menu-compendio" id="submenu-compendio">
             <ul>
-                <li><p class="espacamento">&nbsp</p></li>
-                <li><a class="textindex" href="#"><b>1</b></a></li>
-                <li><a class="textindex" href="#" ><b>2</b></a></li>
-                <li><a class="textindex" href="..." ><b>3s</b></a></li>
-                <li><a class="textindex" href="..." ><b>Compêndio</b></a></li>
-                <li><a class="textindex" href="..." ><b>Animais Lendarios</b></a></li>
-                <li><a class="textindex" href="..." ><b>Peixes Lendarios</b></a></li>   
-                <li><a class="textindex" href="..." ><b>Desafios</b></a></li>  
-                <li><a class="textindex" href="..." ><b>Premios</b></a></li>  
-                <li><a class="textindex" href="..." ><b>Premios</b></a></li>              
+                <li class="item"><a class="textindex" href="#"><b>Animais</b></a></li>
+                <li class="item"><a class="textindex" href="#" ><b>equipamentos</b></a></li>
+                <li class="item"><a class="textindex" href="..." ><b>Peixes</b></a></li>
+                <li class="item"><a class="textindex" href="..." ><b>Compêndio</b></a></li>
+                <li class="item"><a class="textindex" href="..." ><b>gangues</b></a></li>
+                <li class="item"><a class="textindex" href="..." ><b>plantas</b></a></li>   
+                <li class="item"><a class="textindex" href="..." ><b>cavalos</b></a></li>  
+                <li class="item"><a class="textindex" href="..." ><b>armas</b></a></li>  
+                <li class="item"><a class="textindex" href="..." ><b>cartas de cigarro</b></a></li>              
             </ul>
-        </nav>        
+        </nav>       
         <script>
             document.addEventListener("DOMContentLoaded", function () {
                 const btnCompendio = document.getElementById("btn-compendio");
@@ -121,8 +120,26 @@
                 <p class="hist">&nbspRed Dead Redemption 2 é mais do que uma história de ação e aventura. É uma reflexão sobre a lealdade, a mudança e a inevitabilidade da modernidade. A gangue Van der Linde, representando uma era de liberdade e caos, é derrotada pela transição para uma nova ordem social e pela perda de seu próprio idealismo. O jogo é uma crônica de um mundo que está desaparecendo, e a morte de Arthur Morgan simboliza o fim de um capítulo do Velho Oeste. Ao final, a história de John Marston em Red Dead Redemption 1 fecha o ciclo de uma era de desespero, tentando seguir em frente, apesar do legado da gangue Van der Linde.</p>
                 <br>
                 <img class="imghist" src="img/historia/conclusao.webp">
-            </b>
+                <br>
+                <section class="controle-rodape">
+                    <footer class="rodape">
+                        <section>
+                            <img class="rockstar-rodape" src="img/rockstar.png">
+                        </section>
+                        <br>
+                        <br>
+                        <nav>
+                            <section class="feitopor">
+                                <p>feito por leonardo:</p>
+                            </section>
+                            <section class="redes">
+                                <a href="https://github.com/melatizx" target="_blank"><img src="img/github.png"></a>
+                                <a href="https://instagram.com/melatizx" target="_blank"><img  src="img/instagram.png"></a>
+                                <a href="https://br.linkedin.com/in/leonardo-melati-566884318?trk=people-guest_people_search-card" target="_blank"><img src="img/linkedin.png"></a>
+                            </section>
+                        </nav>
+                    </footer>
+                </section>
         </section>        
-        
     </body>
 </html>
