--- a/premios.html
+++ b/premios.html
@@ -4,11 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <style>
-            .espacamento{
-                background-color: red;
-            }
-        </style>
         <title>
             rdr2.com
         </title>
@@ -43,9 +38,6 @@
                 <li class="item"><a class="textindex" href="..." ><b>cartas de cigarro</b></a></li>              
             </ul>
         </nav>        
-        <section class="conteudo principal">
-            <img class="rockstar" src="img/rockstar.png">
-        </section>
         <script>
             document.addEventListener("DOMContentLoaded", function () {
                 const btnCompendio = document.getElementById("btn-compendio");
@@ -69,5 +61,8 @@
                 });
             });
         </script>
+        <section class="conteudo">
+            <h1>Premios</h1>
+        </section>
     </body>
 </html>
