--- a/paginasdesafios/bandido.html
+++ b/paginasdesafios/bandido.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
+        <style>
+            .espacamento{
+                background-color: red;
+            }
+        </style>
         <title>
             rdr2.com
         </title>
@@ -56,14 +61,6 @@
             <ul>
                 <li class="item"><a class="textindex" href="paginaslendarios/animaislend.html"><b>Animais Lendarios</b></a></li>
                 <li class="item"><a class="textindex" href="paginaslendarios/peixeslendarios.html" ><b>Peixes Lendarios</b></a></li>             
-            </ul>
-        </nav> 
-
-         <!-- Submenu Lendarios -->
-         <nav class="menu-lendarios" id="submenu-lendarios">
-            <ul>
-                <li class="item"><a class="textindex" href="animaislend.html"><b>Animais Lendarios</b></a></li>
-                <li class="item"><a class="textindex" href="peixeslendarios.html" ><b>Peixes Lendarios</b></a></li>             
             </ul>
         </nav> 
 
@@ -141,8 +138,9 @@
                 });
             });
         </script>
+
         <section class="conteudo">
-            <h1>Personagens</h1>
+            <h1>Pagina</h1>
         </section>
     </body>
 </html>
