--- a/paginasdesafios/perito.html
+++ b/paginasdesafios/perito.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
+        <style>
+            .espacamento{
+                background-color: red;
+            }
+        </style>
         <title>
             rdr2.com
         </title>
@@ -43,7 +48,7 @@
                 <li class="item"><a class="textindex" href="paginasdesafios/explorador.html" ><b>Explorador</b></a></li>
                 <li class="item"><a class="textindex" href="paginasdesafios/apostador.html" ><b>apostador</b></a></li>
                 <li class="item"><a class="textindex" href="paginasdesafios/herborista.html" ><b>herborista</b></a></li>
-                <li class="item"><a class="textindex" href="paginasdesafios/equitação.html" ><b>equitação</b></a></li>
+                <li class="item"><a class="textindex" href="paginasdesafios/equitacao.html" ><b>equitação</b></a></li>
                 <li class="item"><a class="textindex" href="paginasdesafios/mestre.html" ><b>mestre caçador</b></a></li>   
                 <li class="item"><a class="textindex" href="paginasdesafios/atirador.html" ><b>atirador de elite</b></a></li>  
                 <li class="item"><a class="textindex" href="paginasdesafios/sobrevivente.html" ><b>sobrevivente</b></a></li>  
@@ -56,14 +61,6 @@
             <ul>
                 <li class="item"><a class="textindex" href="paginaslendarios/animaislend.html"><b>Animais Lendarios</b></a></li>
                 <li class="item"><a class="textindex" href="paginaslendarios/peixeslendarios.html" ><b>Peixes Lendarios</b></a></li>             
-            </ul>
-        </nav> 
-
-         <!-- Submenu Lendarios -->
-         <nav class="menu-lendarios" id="submenu-lendarios">
-            <ul>
-                <li class="item"><a class="textindex" href="animaislend.html"><b>Animais Lendarios</b></a></li>
-                <li class="item"><a class="textindex" href="peixeslendarios.html" ><b>Peixes Lendarios</b></a></li>             
             </ul>
         </nav> 
 
@@ -141,8 +138,9 @@
                 });
             });
         </script>
+
         <section class="conteudo">
-            <h1>Personagens</h1>
+            <h1>Pagina</h1>
         </section>
     </body>
 </html>
