--- a/paginaslendarios/peixeslendarios.html
+++ b/paginaslendarios/peixeslendarios.html
@@ -59,14 +59,6 @@
             </ul>
         </nav> 
 
-         <!-- Submenu Lendarios -->
-         <nav class="menu-lendarios" id="submenu-lendarios">
-            <ul>
-                <li class="item"><a class="textindex" href="animaislend.html"><b>Animais Lendarios</b></a></li>
-                <li class="item"><a class="textindex" href="peixeslendarios.html" ><b>Peixes Lendarios</b></a></li>             
-            </ul>
-        </nav> 
-
         <!-- Script Submenu Compendio -->
         <script>
             document.addEventListener("DOMContentLoaded", function () {
@@ -141,8 +133,9 @@
                 });
             });
         </script>
+        </script>
         <section class="conteudo">
-            <h1>Personagens</h1>
+            <h1>Peixes Lendarios</h1>
         </section>
     </body>
 </html>
