--- a/bandido.html
+++ b/bandido.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
@@ -30,37 +30,37 @@
         <!-- Submenu Compêndio -->
         <nav class="menu-compendio" id="submenu-compendio">
             <ul>
-                <li class="item"><a class="textindex" href="paginascompendio/animais.html"><b>Animais</b></a></li>
-                <li class="item"><a class="textindex" href="paginascompendio/equipamentos.html" ><b>equipamentos</b></a></li>
-                <li class="item"><a class="textindex" href="paginascompendio/peixes.html" ><b>Peixes</b></a></li>
-                <li class="item"><a class="textindex" href="paginascompendio/gangues.html" ><b>gangues</b></a></li>
-                <li class="item"><a class="textindex" href="paginascompendio/plantas.html" ><b>plantas</b></a></li>   
-                <li class="item"><a class="textindex" href="paginascompendio/cavalos.html" ><b>cavalos</b></a></li>  
-                <li class="item"><a class="textindex" href="paginascompendio/armas.html" ><b>armas</b></a></li>  
-                <li class="item"><a class="textindex" href="paginascompendio/cartas.html" ><b>cartas de cigarro</b></a></li>              
+                <li class="item"><a class="textindex" href="animais.html"><b>Animais</b></a></li>
+                <li class="item"><a class="textindex" href="equipamentos.html" ><b>equipamentos</b></a></li>
+                <li class="item"><a class="textindex" href="peixes.html" ><b>Peixes</b></a></li>
+                <li class="item"><a class="textindex" href="gangues.html" ><b>gangues</b></a></li>
+                <li class="item"><a class="textindex" href="plantas.html" ><b>plantas</b></a></li>   
+                <li class="item"><a class="textindex" href="cavalos.html" ><b>cavalos</b></a></li>  
+                <li class="item"><a class="textindex" href="armas.html" ><b>armas</b></a></li>  
+                <li class="item"><a class="textindex" href="cartas.html" ><b>cartas de cigarro</b></a></li>              
             </ul>
         </nav>   
         
         <!-- Submenu Desafios -->
         <nav class="menu-desafios" id="submenu-desafios">
             <ul>
-                <li class="item"><a class="textindex" href="paginasdesafios/bandido.html"><b>Bandido</b></a></li>
-                <li class="item"><a class="textindex" href="paginasdesafios/explorador.html" ><b>Explorador</b></a></li>
-                <li class="item"><a class="textindex" href="paginasdesafios/apostador.html" ><b>apostador</b></a></li>
-                <li class="item"><a class="textindex" href="paginasdesafios/herborista.html" ><b>herborista</b></a></li>
-                <li class="item"><a class="textindex" href="paginasdesafios/equitacao.html" ><b>equitação</b></a></li>
-                <li class="item"><a class="textindex" href="paginasdesafios/mestre.html" ><b>mestre caçador</b></a></li>   
-                <li class="item"><a class="textindex" href="paginasdesafios/atirador.html" ><b>atirador de elite</b></a></li>  
-                <li class="item"><a class="textindex" href="paginasdesafios/sobrevivente.html" ><b>sobrevivente</b></a></li>  
-                <li class="item"><a class="textindex" href="paginasdesafios/perito.html" ><b>perito em armas</b></a></li>              
+                <li class="item"><a class="textindex" href="bandido.html"><b>Bandido</b></a></li>
+                <li class="item"><a class="textindex" href="explorador.html" ><b>Explorador</b></a></li>
+                <li class="item"><a class="textindex" href="apostador.html" ><b>apostador</b></a></li>
+                <li class="item"><a class="textindex" href="herborista.html" ><b>herborista</b></a></li>
+                <li class="item"><a class="textindex" href="equitação.html" ><b>equitação</b></a></li>
+                <li class="item"><a class="textindex" href="mestre.html" ><b>mestre caçador</b></a></li>   
+                <li class="item"><a class="textindex" href="atirador.html" ><b>atirador de elite</b></a></li>  
+                <li class="item"><a class="textindex" href="sobrevivente.html" ><b>sobrevivente</b></a></li>  
+                <li class="item"><a class="textindex" href="perito.html" ><b>perito em armas</b></a></li>              
             </ul>
         </nav> 
 
          <!-- Submenu Lendarios -->
          <nav class="menu-lendarios" id="submenu-lendarios">
             <ul>
-                <li class="item"><a class="textindex" href="paginaslendarios/animaislend.html"><b>Animais Lendarios</b></a></li>
-                <li class="item"><a class="textindex" href="paginaslendarios/peixeslendarios.html" ><b>Peixes Lendarios</b></a></li>             
+                <li class="item"><a class="textindex" href="animaislend.html"><b>Animais Lendarios</b></a></li>
+                <li class="item"><a class="textindex" href="peixeslendarios.html" ><b>Peixes Lendarios</b></a></li>             
             </ul>
         </nav> 
 
