--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             </ul>
         </nav> 
 
-        <section class="conteudo principal">
+        <!-- <section class="conteudo principal">
             <img class="rockstar" src="img/rockstar.png">
-        </section>
+        </section> -->
 
         <!-- Script Submenu Compendio -->
         <script>
@@ -142,5 +142,8 @@
                 });
             });
         </script>
+        <section class="conteudo principal">
+            <img class="imgprincipal" src="img/rdr2_tshirt_logo_textured_desktop.jpg"> 
+        </section>
     </body>
 </html>
