--- a/personagens.html
+++ b/personagens.html
@@ -148,23 +148,23 @@
             <h1 class="titulo">Personagens importantes</h1>
             <br>
             <section class="personagens">
-                <section class="p1">
+                <section class="p">
                     <h2>Arthur morgan</h2>
                     <img class="imgp" src="img/personagens/arthur.jpg">
                     <p>Arthur Morgan é o protagonista de Red Dead Redemption 2, um fora da lei experiente e leal à gangue Van der Linde. Criado por Dutch desde jovem, ele vê a gangue como sua família. No entanto, ao longo da história, começa a questionar Dutch e suas decisões.</p>
                     <br>
                     <p>Após ser diagnosticado com tuberculose, Arthur reflete sobre sua vida e busca redenção, tentando ajudar John Marston e sua família a escaparem da vida criminosa. Seu destino é trágico, mas suas últimas ações garantem que John tenha uma segunda chance, tornando Arthur um símbolo de sacrifício e redenção.</p>
                 </section>
-                <section class="p2">
+                <section class="p">
                     <h2>dutch van der line</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/dutch.jpg">
                     <p>Dutch van der Linde é o carismático líder da gangue Van der Linde e uma figura paterna para Arthur Morgan e John Marston. No início, ele se apresenta como um idealista, acreditando que a gangue pode viver livre da opressão da sociedade. </p>
                     <br>
                     <p>Porém, à medida que os planos começam a falhar, Dutch se torna cada vez mais paranoico, violento e manipulador. Ele abandona antigos aliados e se deixa influenciar por Micah Bell, o que leva à queda da gangue. No fim, ele desaparece, apenas para reaparecer anos depois no confronto final entre John e Micah, onde dá um último tiro antes de partir sem dizer uma palavra.</p>
                 </section>
-                <section class="p3">
+                <section class="p">
                     <h2>john marston</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/john.jpg">
                     <p>John Marston é um dos membros da gangue Van der Linde e o protagonista de Red Dead Redemption. No início de RDR2, ele é um fora da lei impulsivo que tenta provar seu valor, mas com o tempo, percebe que quer abandonar a vida criminosa para viver com sua esposa, Abigail, e seu filho, Jack.  </p>
                     <br>
                     <p>Com a ajuda de Arthur Morgan, John consegue escapar da gangue e construir uma nova vida. No epílogo, ele trabalha duro para comprar uma fazenda e proteger sua família, mas seu passado o alcança em RDR1, quando é forçado pelo governo a caçar seus antigos companheiros. Seu destino final é trágico, mas ele se torna um símbolo de luta por redenção.</p>
@@ -172,23 +172,23 @@
             </section>
 
             <section class="personagens">
-                <section class="p1">
+                <section class="p">
                     <h2>micah bell</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/micah.jpg">
                     <p>Micah também representa o contraste direto com Arthur — enquanto Arthur busca redenção e se preocupa com os outros, Micah segue firme no egoísmo e na violência até o fim. Ele não demonstra arrependimento em nenhum momento, e sua arrogância é uma das razões pelas quais tantos da gangue se voltam contra ele.</p>
                     <br>
                     <p>Sua influência sobre Dutch mostra como o poder da manipulação pode corromper até os líderes mais carismáticos, e sua presença serve como catalisador da tragédia que se desenrola no jogo.</p>
                 </section>
-                <section class="p2">
+                <section class="p">
                     <h2>Hosea Matthews</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/hosea.avif">
                     <p>Hosea também era um dos poucos membros da gangue que realmente pensava no futuro. Ele sonhava em sair daquela vida e viver em paz, longe do crime. Sempre tentou aconselhar Dutch a ser mais cauteloso, mas com o tempo, viu que suas palavras já não tinham o mesmo peso. </p>
                     <br>
                     <p>Ele era respeitado por quase todos na gangue, especialmente por Arthur, que o via como uma figura paterna. Sua morte durante o assalto a banco em Saint Denis não foi só uma perda pessoal, mas também um golpe moral enorme — depois disso, a gangue começa a se desfazer rapidamente.  </p>
                 </section>
-                <section class="p3">
+                <section class="p">
                     <h2>sadie adler</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/sadie.jpg">
                     <p>Sadie Adler começa como uma fazendeira cuja vida é destruída pelos O'Driscolls, levando-a a buscar vingança. Após ser resgatada pela gangue Van der Linde, ela rapidamente se transforma em uma guerreira destemida, aprendendo a lutar e sobreviver em um mundo cruel. </p>
                     <br>
                     <p>Com o tempo, Sadie se torna uma caçadora de recompensas habilidosa, mostrando que não precisa de ninguém para protegê-la. Ela é uma das poucas que permanecem leais a Arthur e John, ajudando-os até o fim. No epílogo, sua coragem é fundamental para a vingança contra Micah, antes de decidir seguir seu próprio caminho e deixar a vida de crime para trás.</p>
@@ -196,51 +196,70 @@
             </section>
 
             <section class="personagens">
-                <section class="p1">
+                <section class="p">
                     <h2>charles smith</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/charles.jpg">
                     <p>Charles Smith é um dos membros mais leais e honrados da gangue Van der Linde. Silencioso, forte e habilidoso em combate, ele tem um grande senso de justiça e tenta sempre proteger os mais fracos. Metade indígena, ele valoriza suas raízes e frequentemente se opõe à brutalidade desnecessária da gangue. </p>
                     <br>
                     <p>Diferente de muitos outros, Charles nunca se deixa cegar por Dutch e percebe cedo a decadência da gangue. Após a queda do grupo, ele ajuda John Marston a recomeçar sua vida e, depois da vingança contra Micah, parte para viver em paz com seu povo.</p>
                 </section>
-                <section class="p2">
+                <section class="p">
                     <h2>javier escuella</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/javier.jpg">
                     <p>Javier Escuella é um ex-revolucionário mexicano que se junta à gangue Van der Linde, atraído pelo discurso de liberdade de Dutch. Habilidoso no combate e na sobrevivência, ele é um dos mais fiéis ao líder da gangue, nunca questionando suas decisões, mesmo quando tudo começa a ruir.</p>
                     <br>
                     <p>Apesar de ser respeitado por muitos membros, sua devoção a Dutch o impede de enxergar os sinais de decadência da gangue. Após a queda do grupo, ele foge para o México, onde se esconde até ser caçado por John Marston em *Red Dead Redemption*. Sua história mostra como a lealdade, quando mal direcionada, pode ser uma armadilha.</p>
                 </section>
-                <section class="p3">
+                <section class="p">
                     <h2>bill williamson</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/bill.jpg">
                     <p>Bill Williamson é um dos membros mais brutais e impulsivos da gangue Van der Linde. Ex-soldado, ele não é dos mais inteligentes, mas compensa isso com sua força e lealdade a Dutch. Sempre pronto para a violência, Bill acredita que o poder vem da intimidação, muitas vezes agindo sem pensar.</p>
                     <br>
                     <p>Durante a queda da gangue, ele segue Dutch cegamente, sem perceber que tudo está desmoronando. Após a separação do grupo, ele foge para o México e se torna um líder de bandidos, até ser caçado por John Marston em *Red Dead Redemption*.</p>
                 </section>
             </section>
             <section class="personagens">
-                <section class="p1">
+                <section class="p">
                     <h2>leopold strauss</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/leopold.avif">
                     <p>Leopold Strauss é o contador da gangue Van der Linde, responsável por administrar empréstimos e cobrar dívidas de forma impiedosa. Embora pareça educado e discreto, ele é frio e sem compaixão, explorando pessoas pobres com juros abusivos. Suas cobranças brutais fazem Arthur refletir sobre a moralidade da gangue, especialmente ao ver o sofrimento que causam. </p>
                     <br>
                     <p>Com o tempo, Arthur o expulsa, reconhecendo o mal que Strauss trouxe para muitos. Ele representa o lado mais silencioso, mas igualmente cruel, da vida criminosa.</p>
                 </section>
-                <section class="p2">
+                <section class="p">
                     <h2>sean macguire</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/sean.jpg">
                     <p>Sean MacGuire é um jovem irlandês carismático e impulsivo da gangue Van der Linde. Sempre brincalhão, ele adora provocar seus companheiros e contar histórias exageradas sobre suas supostas façanhas. Apesar de seu jeito despreocupado, é um lutador valente e leal ao grupo.</p>
                     <br>
                     <p>Depois de ser resgatado dos Pinkertons, ele desfruta de um curto período com a gangue antes de ser morto repentinamente em uma emboscada em Rhodes. Sua morte pega todos de surpresa e simboliza o fim dos dias relativamente pacíficos da gangue, dando início à sua queda.</p>
                 </section>
-                <section class="p3">
+                <section class="p">
                     <h2>mary linton</h2>
-                    <img class="imgp" src="img/personagens/arthur.jpg">
+                    <img class="imgp" src="img/personagens/mary.webp">
                     <p>Mary Linton é o grande amor de Arthur Morgan, mas o relacionamento deles fracassa porque ela deseja uma vida estável, enquanto ele está preso ao crime. Mesmo separados, ela ainda se preocupa com ele e tenta convencê-lo a mudar, chegando a pedir que fujam juntos, mas Arthur recusa, sabendo que nunca poderá lhe dar a vida que ela merece. </p>
                     <br>
                     <p>Após sua morte, Mary visita seu túmulo, mostrando que nunca deixou de amá-lo. Seu relacionamento simboliza a vida que Arthur poderia ter tido, mas que suas escolhas tornaram impossível.</p>
                 </section>
             </section>
-        </section>
+            <br>
+            <section class="controle-rodape">
+                <footer class="rodape">
+                    <section>
+                        <img class="rockstar-rodape" src="img/rockstar.png">
+                    </section>
+                    <br>
+                    <br>
+                    <nav>
+                        <section class="feitopor">
+                            <p>feito por leonardo:</p>
+                        </section>
+                        <section class="redes">
+                            <a href="https://github.com/melatizx" target="_blank"><img src="img/github.png"></a>
+                            <a href="https://instagram.com/melatizx" target="_blank"><img  src="img/instagram.png"></a>
+                            <a href="https://br.linkedin.com/in/leonardo-melati-566884318?trk=people-guest_people_search-card" target="_blank"><img src="img/linkedin.png"></a>
+                        </section>
+                    </nav>
+                </footer>
+            </section>
     </body>
 </html>
